# pyMD

./: .gitignore  CLAUDE.md  MD_SIMULATOR_DESIGN.md  README.md  environment.yml  pyproject.toml
.github/workflows/: release.yml
benchmarks/: README.md
docs/: architecture.md  开发者指南.md  用户手册.md
examples/: 01_harmonic_oscillator.py  02_diatomic_morse.py  03_thermostat_comparison.py  04_velocity_distribution.py  05_melting_transition.py  06_equipartition.py  07_geometry_optimization.py  08_five_atom_optimization.py  README.md  five_atom_lj.yaml  lj_argon.yaml  nve_energy_test.py  quick_test.py  run_lj_argon.py
gui/: api.py  main.py
gui/ui/: app.js  index.html  styles.css
md_simulator/boundary/: __init__.py  boundary_condition.py  mixed_bc.py  open_bc.py  periodic_bc.py
md_simulator/builder/: __init__.py  config_loader.py  system_builder.py
md_simulator/core/: atom.py  constants.py  element_registry.py  state.py  system.py  units.py
md_simulator/force/: autodiff_backend.py  force_calculator.py
md_simulator/integrator/: integrator.py  velocity_verlet.py
md_simulator/minimizer/: conjugate_gradient.py  lbfgs.py  minimizer.py  steepest_descent.py
md_simulator/neighbor/: brute_force.py  cell_list.py  neighbor_list.py  verlet_list.py
md_simulator/observer/: observer.py
md_simulator/potential/: composite_potential.py  potential_energy.py
md_simulator/simulator/: simulator.py
md_simulator/thermostat/: berendsen.py  no_thermostat.py  nose_hoover.py  thermostat.py
pyMD/: __init__.py
pyMD/boundary/: boundary_condition.py  (+3 more)
tests/: debug_autodiff.py
(+116 files in other folders)
