[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMD"
version = "0.1.0"
description = "Molecular dynamics simulator with autodiff forces"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
test = ["pytest"]
jax = ["jax", "jaxlib"]
torch = ["torch"]
autograd = ["autograd"]

[tool.setuptools.packages.find]
include = ["pyMD*"]
