[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pymd"
version = "0.1.0"
description = "Molecular dynamics simulator with autodiff forces"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
test = ["pytest", "httpx"]
api = ["fastapi", "uvicorn[standard]"]
jax = ["jax", "jaxlib"]
torch = ["torch"]
autograd = ["autograd"]
gui = ["pywebview"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pymd*"]
